--- a/pkg/Containerfile
+++ b/pkg/Containerfile
@@ -1,5 +1,6 @@
 ARG FREEBSD_RELEASE="14.3"
-FROM freebsd/freebsd-runtime:${FREEBSD_RELEASE}
+ARG ARCHITECTURE="amd64"
+FROM ghcr.io/freebsd/freebsd-runtime:${FREEBSD_RELEASE}
 
 #Update base components and install dependencies
 RUN sed -EI -e s/quarterly/latest/ /etc/pkg/FreeBSD.conf
