Made arguments reusable for the containerfiles

--- a/openjdk23/Containerfile
+++ b/openjdk23/Containerfile
@@ -2,5 +2,8 @@ ARG FREEBSD_RELEASE="14.3"
 ARG ARCHITECTURE="amd64"
 FROM cloudbsd/freebsd-build-pkg-${ARCHITECTURE}:${FREEBSD_RELEASE}
 
+ARG FREEBSD_RELEASE
+ARG ARCHITECTURE
+
 RUN env ASSUME_ALWAYS_YES=yes IGNORE_OS_VERSION=yes pkg update
 RUN env ASSUME_ALWAYS_YES=yes IGNORE_OS_VERSION=yes pkg install -y openjdk23
