Modified ports base image to be the toolchain because in version 15.0+ there is toolchain image that is more useful.

--- a/ports/Containerfile
+++ b/ports/Containerfile
@@ -1,6 +1,6 @@
 ARG DOMAIN="ghcr.io"
 ARG ORG="freebsd"
-ARG SRCIMAGENAME="freebsd-runtime"
+ARG SRCIMAGENAME="freebsd-toolchain"
 ARG FREEBSD_RELEASE="14.3"
 ARG ARCHITECTURE="amd64"
 FROM ${DOMAIN}/${ORG}/${SRCIMAGENAME}:${FREEBSD_RELEASE}
